--- a/index.html
+++ b/index.html
@@ -334,103 +334,39 @@
     </section>
 
     <!-- Certifications Section -->
-    <section id="certifications" class="section">
-        <div class="container">
-            <h2>Certifications & Training</h2>
-            <div class="certifications-grid">
-                <div class="cert-card featured">
-                    <div class="cert-icon">
-                        <i class="fab fa-android"></i>
-                    </div>
-                    <div class="cert-content">
-                        <h3>Android Certified Application Developer</h3>
-                        <p class="cert-issuer">Android ATC</p>
-                        <span class="cert-badge android">Mobile Development</span>
-                    </div>
-                </div>
-                <div class="cert-card featured">
-                    <div class="cert-icon">
-                        <i class="fas fa-shield-alt"></i>
-                    </div>
-                    <div class="cert-content">
-                        <h3>HCIA-Security V4.0</h3>
-                        <p class="cert-issuer">Huawei</p>
-                        <span class="cert-badge security">Cybersecurity</span>
-                    </div>
-                </div>
-                <div class="cert-card featured">
-                    <div class="cert-icon">
-                        <i class="fas fa-user-shield"></i>
-                    </div>
-                    <div class="cert-content">
-                        <h3>CompTIA Security+</h3>
-                        <p class="cert-issuer">CompTIA</p>
-                        <span class="cert-badge security">Security Certification</span>
-                    </div>
-                </div>
-                <div class="cert-card">
-                    <div class="cert-icon">
-                        <i class="fas fa-bug"></i>
-                    </div>
-                    <div class="cert-content">
-                        <h3>Ethical Hacking 101</h3>
-                        <p class="cert-issuer">OWASP & 0day</p>
-                        <span class="cert-badge hacking">Ethical Hacking</span>
-                    </div>
-                </div>
-                <div class="cert-card">
-                    <div class="cert-icon">
-                        <i class="fas fa-code"></i>
-                    </div>
-                    <div class="cert-content">
-                        <h3>Top Coders Malaysia 2024</h3>
-                        <p class="cert-issuer">DSA & MDEC</p>
-                        <span class="cert-badge coding">Programming</span>
-                    </div>
-                </div>
-                <div class="cert-card">
-                    <div class="cert-icon">
-                        <i class="fas fa-user-secret"></i>
-                    </div>
-                    <div class="cert-content">
-                        <h3>Social Engineering & Phishing in AI</h3>
-                        <p class="cert-issuer">OWASP & 0Day</p>
-                        <span class="cert-badge security">AI Security</span>
-                    </div>
-                </div>
-                <div class="cert-card">
-                    <div class="cert-icon">
-                        <i class="fas fa-usb"></i>
-                    </div>
-                    <div class="cert-content">
-                        <h3>Plug X Pwn: AI-Powered BadUSB</h3>
-                        <p class="cert-issuer">Asia Pacific University</p>
-                        <span class="cert-badge hardware">Hardware Security</span>
-                    </div>
-                </div>
-                <div class="cert-card">
-                    <div class="cert-icon">
-                        <i class="fas fa-search"></i>
-                    </div>
-                    <div class="cert-content">
-                        <h3>Hands on Penetration Testing Labs</h3>
-                        <p class="cert-issuer">HRD Corp</p>
-                        <span class="cert-badge pentesting">Penetration Testing</span>
-                    </div>
-                </div>
-                <div class="cert-card">
-                    <div class="cert-icon">
-                        <i class="fas fa-clinic-medical"></i>
-                    </div>
-                    <div class="cert-content">
-                        <h3>Cyber Clinic Intervention 2023</h3>
-                        <p class="cert-issuer">ZIKRONE IT HOLDINGS</p>
-                        <span class="cert-badge intervention">Cyber Intervention</span>
-                    </div>
-                </div>
-            </div>
+<section id="certifications" class="section">
+    <div class="container">
+        <h2>Certifications & Training</h2>
+        
+        <!-- Professional Certifications -->
+        <div class="certifications-content">
+            <h3>Professional Certifications</h3>
+            <ul class="cert-list">
+                <li>Android Certified Application Developer - <span class="issuer">Android ATC</span></li>
+                <li>HCIA-Security V4.0 - <span class="issuer">Huawei</span></li>
+                <li>CompTIA Security+ - <span class="issuer">CompTIA</span></li>
+                <li>Ethical Hacking 101 - <span class="issuer">OWASP & 0day</span></li>
+                <li>Top Coders Malaysia 2024 Coding - <span class="issuer">DSA & MDEC</span></li>
+                <li>Social Engineering & Phishing in the Age of AI - <span class="issuer">OWASP & 0Day</span></li>
+                <li>Plug X Pwn: AI-Powered BadUSB - <span class="issuer">Asia Pacific University</span></li>
+                <li>Hands on Penetration Testing Labs Course - <span class="issuer">HRD Corp</span></li>
+                <li>Cyber Clinic Intervention 2023 - <span class="issuer">ZIKRONE IT HOLDINGS</span></li>
+            </ul>
         </div>
-    </section>
+
+        <!-- Udemy Courses -->
+        <div class="udemy-courses">
+            <h3><i class="fab fa-udemy"></i> Udemy Courses</h3>
+            <ul class="udemy-list">
+                <li>Complete Web Development Bootcamp</li>
+                <li>Flutter & Dart - Complete Guide</li>
+                <li>Ethical Hacking: Complete Course</li>
+                <li>JavaScript: The Complete Guide</li>
+                <!-- Add your actual Udemy courses here -->
+            </ul>
+        </div>
+    </div>
+</section>
 
     <!-- Competitions Section -->
     <section id="competitions" class="section">
